<resources>
    <string name="app_name">Caso Practico2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add">+</string>
    <string name="sub">-</string>
    <string name="plus">*</string>
    <string name="div">/</string>
    <string name="salir">Salir</string>
    <string name="nueva_operaci_n">Nueva operación</string>
    <string name="introudce_los_datos_para_la">Introudce los datos para la</string>
    <string name="zero">0</string>
    <string name="calcular">Calcular</string>
</resources>