<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MenuFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/add"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:text="@string/add"
            android:textSize="65sp"
            style="android:attr/buttonBarButtonStyle"
            android:textStyle="bold" />

        <Button
            android:layout_marginStart="20sp"
            android:id="@+id/sub"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:text="@string/sub"
            android:textSize="65sp"
            style="android:attr/buttonBarButtonStyle"
            android:textStyle="bold"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/mul"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:text="@string/plus"
            android:textSize="65sp"
            android:textStyle="bold"
            style="android:attr/buttonBarButtonStyle"
            />

        <Button
            android:id="@+id/div"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="20sp"
            android:text="@string/div"
            android:textSize="65sp"
            android:textStyle="bold"
            style="android:attr/buttonBarButtonStyle"
            />
    </LinearLayout>


</LinearLayout>